poptip: + no animate style

--- a/src/components/poptip/demo/demo.html
+++ b/src/components/poptip/demo/demo.html
@@ -2,7 +2,7 @@
   <header>Basic</header>
   <div uex-poptip-container uex-poptip-target>
     poptip right
-    <uex-poptip placement="right center">
+    <uex-poptip placement="right center" class="poptip-noanimate">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
