--- a/src/components/pop/demo/demo.html
+++ b/src/components/pop/demo/demo.html
@@ -1,4 +1,4 @@
-<div id="component-pop-page" ng-controller="popCtrl as $ctrl">
+<div id="component-pop-page">
   <section>
     <header>Basic</header>
     <button type="button" uex-pop-container uex-pop-target>
