--- a/src/components/select/demo/demo.html
+++ b/src/components/select/demo/demo.html
@@ -5,7 +5,7 @@
   }
 </style>
 
-<div ng-controller="uexSelectCtrl as $ctrl">
+<div>
   <section>
     <header>Basic</header>
     <uex-select exp="item in $ctrl.items as item.name" ng-model="$ctrl.selected1" title="Selected" class="select-check">
