--- a/src/components/modal/demo/demo.html
+++ b/src/components/modal/demo/demo.html
@@ -1,11 +1,11 @@
-<div id="component-modal-page" ng-controller="modalCtrl as vm">
+<div id="component-modal-page">
   <section>
     <header>Basic</header>
-    <button ng-click="vm.open1()">Modal 1</button>
-    <button ng-click="vm.open2()">Modal 2</button>
-    <button ng-click="vm.confirm()">Modal Confirm</button>
-    <button ng-click="vm.info()">Modal Info</button>
-    <uex-modal delegate="vm.m" title="Foo title" class="modal-bar">
+    <button ng-click="$ctrl.open1()">Modal 1</button>
+    <button ng-click="$ctrl.open2()">Modal 2</button>
+    <button ng-click="$ctrl.confirm()">Modal Confirm</button>
+    <button ng-click="$ctrl.info()">Modal Info</button>
+    <uex-modal delegate="$ctrl.m" title="Foo title" class="modal-bar">
       Foo
       <div ng-repeat="v in [1,2,3]">
         {{v}}
@@ -14,8 +14,8 @@
   </section>
   <section>
     <header>Custom</header>
-    <button ng-click="vm.c1.open()">Custom 1</button>
-    <button ng-click="vm.c2.open()">Custom 2</button>
+    <button ng-click="$ctrl.c1.open()">Custom 1</button>
+    <button ng-click="$ctrl.c2.open()">Custom 2</button>
     <h1>foo</h1>
     <h1>foo</h1>
     <h1>foo</h1>
@@ -33,7 +33,7 @@
     <h1>foo</h1>
     <h1>foo</h1>
     <h1>foo</h1>
-    <uex-modal delegate="vm.c1" title="Custom Modal 1" class="modal-c-1">
+    <uex-modal delegate="$ctrl.c1" title="Custom Modal 1" class="modal-c-1">
       <form onsubmit="console.log('asd'); return false;">
         <input type="submit" value="Submit" />
       </form>
@@ -54,7 +54,7 @@
         </uex-poptip>
       </button>
     </uex-modal>
-    <uex-modal delegate="vm.c2" title="Custom Modal 2" class="modal-c-2">
+    <uex-modal delegate="$ctrl.c2" title="Custom Modal 2" class="modal-c-2">
       Foo
     </uex-modal>
   </section>
