--- a/src/components/modal/demo/demo.html
+++ b/src/components/modal/demo/demo.html
@@ -4,6 +4,7 @@
     <button ng-click="$ctrl.open1()">Modal 1</button>
     <button ng-click="$ctrl.open2()">Modal 2</button>
     <button ng-click="$ctrl.confirm()">Modal Confirm</button>
+    <button ng-click="$ctrl.modalConfirm1.open()">Modal Confirm directive</button>
     <button ng-click="$ctrl.info()">Modal Info</button>
     <uex-modal delegate="$ctrl.m" title="Foo title" class="modal-bar">
       Foo
@@ -11,6 +12,9 @@
         {{v}}
       </div>
     </uex-modal>
+    <uex-modal-confirm delegate="$ctrl.modalConfirm1" title="Confirm modal" class="modal-confirm">
+      Are you sure??
+    </uex-modal-confirm>
   </section>
   <section>
     <header>Custom</header>
