select: make scrolling show inside content and not with header
Also remove undeeded and old css styles.

--- a/src/components/select/demo/demo.html
+++ b/src/components/select/demo/demo.html
@@ -10,7 +10,7 @@
 
   <section>
     <header>Simple select</header>
-    <uex-select exp="item in ['Foo', 'Bar', 'Baz']" ng-model="$ctrl.selected2" text="Selected">
+    <uex-select exp="item in ['Foo', 'Bar', 'Baz', 'Some', 'Test']" ng-model="$ctrl.selected2" text="Selected">
       <uex-select-simple>{{item}}</uex-select-simple>
     </uex-select>
   </section>
