select: fix: populating scope should occur in the pre link fn

--- a/src/components/select/demo/demo.html
+++ b/src/components/select/demo/demo.html
@@ -10,8 +10,10 @@
 
   <section>
     <header>Simple select</header>
-    <uex-select exp="item in ['Foo', 'Bar', 'Baz', 'Some', 'Test']" ng-model="$ctrl.selected2" text="Selected">
-      <uex-select-simple>{{item}}</uex-select-simple>
+    <uex-select exp="itemd in ['Foo', 'Bar', 'Baz', 'Some', 'Test']" ng-model="$ctrl.selected2" text="Selected">
+      <uex-select-simple>
+        <select-comp-test1 u="itemd"></select-comp-test1>
+      </uex-select-simple>
     </uex-select>
   </section>
 
