select: tweak uex-select-simple style (make check always included)

--- a/src/components/select/demo/demo.html
+++ b/src/components/select/demo/demo.html
@@ -10,7 +10,7 @@
 
   <section>
     <header>Simple select</header>
-    <uex-select exp="itemd in ['Foo', 'Bar', 'Baz', 'Some', 'Test']" ng-model="$ctrl.selected2" text="Selected">
+    <uex-select exp="itemd in ['Foo', 'Bar', 'Baz some really longgg', 'Some', 'Test']" ng-model="$ctrl.selected2" text="Selected">
       <uex-select-simple>
         <select-comp-test1 u="itemd"></select-comp-test1>
       </uex-select-simple>
