modal: hide bd on mobile

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -33,6 +33,11 @@ body.uex-modal-active {
       opacity: 0;
     }
   }
+
+  @media (max-width: $layout-bp-xp-max) {
+    transition: none;
+    display: none;
+  }
 }
 
 .uex-modal {
