--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -8,6 +8,19 @@ uex-select {
       font-style: italic;
     }
   }
+
+  &[readonly] {
+    .uex-select {
+      > button {
+        background: #f1f1f1;
+        pointer-events: none;
+      }
+
+      > uex-icon[icon=close] {
+        display: none;
+      }
+    }
+  }
 }
 
 .uex-select {
